# twitter_clone_Django

./: .gitignore  README.md  pyproject.toml
twitter_clone/twitter_clone/: settings.py  urls.py
twitter_clone/twitteruser/: apps.py  forms.py  models.py
twitter_clone/twitteruser/Templates/: home_page.html
twitterclone/Templates/: Login.html  Notifications.html  Profile.html  Signup.html  Tweet.html  Tweet_content.html  User_Profile.html
twitterclone/notification/: models.py  urls.py  views.py
twitterclone/tweet/: admin.py  forms.py  models.py  urls.py  views.py
twitterclone/tweet/migrations/: 0001_initial.py  0002_auto_20200301_2056.py  0003_auto_20200301_2100.py  0004_auto_20200302_1655.py  0005_auto_20200302_1933.py  0006_auto_20200302_1934.py  0007_auto_20200302_1937.py  0008_auto_20200302_1938.py  0009_auto_20200302_2046.py  0010_auto_20200303_0017.py  0011_auto_20200303_0317.py  0012_auto_20200303_0318.py  0013_auto_20200303_0319.py  0014_auto_20200303_2245.py
twitterclone/twitterclone/: settings.py  urls.py
twitterclone/twitteruser/: admin.py  forms.py  models.py  urls.py  views.py
twitterclone/twitteruser/Templates/: edit_ticket.html  login.html  ticket_detail.html
twitterclone/twitteruser/migrations/: 0001_initial.py  0002_delete_ticket.py  0003_mycustomuser_following.py
