[tool.poetry]
name = "twitterclone"
version = "0.1.0"
description = "Twitter-like application"
authors = ["Tamoya Hopkins <tamoyashopkins@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.2"
ipdb = "^0.12.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
